--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ember/optional-features": "^0.6.3",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "^3.11.0",
+    "ember-cli": "^3.9.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
     "ember-cli-dependency-checker": "^3.1.0",
@@ -33,7 +33,7 @@
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-moment-shim": "^3.7.1",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-template-lint": "^1.0.0-beta.1",
+    "ember-cli-template-lint": "^2.0.2",
     "ember-cli-uglify": "^2.1.0",
     "ember-data": "~3.8.0",
     "ember-export-application-global": "^2.0.0",
